[package]
name = "LaylaBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.44.1", features = ["full"] }
once_cell = "1.21.1"
actix-web = "4"
tokio-stream = "0.1.17"